# Dev-WP

./: .gitignore  README.md  dev.sln
py/file-drop/: README.md  main.py  package.json  pnpm-lock.yaml  pyproject.toml  tailwind.config.js
py/file-drop/modules/: __init__.py
py/file-drop/static/asset/: app.css
py/file-drop/static/css/: app.css
py/file-drop/templates/: index.html  sign-in.html  sign-up.html
py/file-drop/templates/layout/: base.html
rust/: Cargo.toml
rust/code/: helper.rs  main.rs
rust/monorepo-turbo/: Cargo.toml  main.rs
rust/monorepo-turbo/www/: package.json  pnpm-lock.yaml  turbo.json
rust/practise/: decorator.rs  main.rs
rust/practise/layer/: define_layer_test.rs  mod.rs
rust/practise/service/: mod.rs
rust/security/: main.rs
rust/security/crypto/: mod.rs
rust/src/: copy.rs  deref.rs  lib.rs  macro.rs  main.rs
rust/src/atomic/: mod.rs
rust/src/bytes/: mod.rs
rust/src/cs/: mod.rs
rust/src/dp/: di.rs  from_pattern.rs  middleware_pattern.rs  mod.rs  new_type.rs  repository.rs  sqlx_pattern.rs  unit_of_work.rs
rust/src/dp/adapter/: mod.rs
rust/src/dp/bridge/: mod.rs
rust/src/dp/builder/: example_001.rs  mod.rs
rust/src/dp/composite/: mod.rs  private_test.rs
rust/src/dp/crp/: mod.rs  old.rs
rust/src/dp/decorator/: mod.rs
rust/src/dp/factory_patterns/: mod.rs
rust/src/dp/mediator/: mod.rs
rust/src/dp/solid/: mod.rs
rust/src/enum_over_dp/: enum_example.rs  mod.rs
rust/src/fp/: mod.rs
rust/src/fs/: dir_entry.rs  mod.rs  path.rs
rust/src/futures/: mod.rs  slow_reader.rs
rust/src/www/: mod.rs
(+134 files in other folders)
