
[package]
name = "rust"
version = "0.1.0"
edition = "2021"


[features]
dev = []

[[bin]]
name = "macro_main"
path = "src/macro_main.rs"

[[bin]]
name = "dev"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.79"
bytes = "1.5.0"
futures = "0.3.30"
pin-project = "1.1.3"
rand = "0.8.5"
tokio = { version = "1.35.1", features = ["full"] }
uuid = { version = "1.6.1", features = ["v4"] }
